# fsassistant

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
fsassistant/: __main__.py  cli.py
tests/: test_cli_argument_parser.py
