[project]
name = "fsassistant"
version = "0.1.0"
description = "AI-powered file system assistant"
authors = [
  { name = "Vitalii Shkibtan", email = "vetalguru@gmail.com" }
]
readme = "README.md"
license = "MIT"
dependencies = []
requires-python = ">=3.10"

[project.scripts]
fsassist = "fsassist.__main__:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
